kubernetes/k3s-prod-a/workloads/linkding/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: docker.io/sissbruecker/linkding:1.38.1@sha256:e04118ee9767bd27a6959a602c28c5835f86817b620a43847ec42fc6c37755e0
          startupProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 30
            failureThreshold: 10
          ports:
           - containerPort: 9090
          volumeMounts:
            - name: linkding
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding
          persistentVolumeClaim:
            claimName: linkding
