kubernetes/k3s-prod-a/workloads/linkding/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: docker.io/sissbruecker/linkding:1.38.0@sha256:469404bee8e6dcfea8f68e4f9d790afd0b5be05bc0f734ce9b9a6fdddc4c57f5
          startupProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 30
            failureThreshold: 10
          ports:
           - containerPort: 9090
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
